# smol-invaders

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  smol-invaders.sln  smol-invaders.vcxproj  smol-invaders.vcxproj.filters
include/fmt/: chrono.h  core.h  format-inl.h  format.h  ostream.h
projects/: Example Project.focus-config
src/: .Manager.cpp.swp  .Player.cpp.swp  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FlyingEnemy.cpp  FlyingEnemy.h  Manager.cpp  Manager.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  SimpleEnemy.cpp  SimpleEnemy.h  helpers.h  main.cpp
temp/session_16a12_1bdda5d7c18a1500/: log.txt
